--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ header:
       label: Contact
       url: /contact/
       style: link
+  logo_img: /images/Nixie Creative Logo Image.png
 footer:
   type: footer
   content: >-
