--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Stackbit Exto Theme
 baseurl: /
 permalink: '/:title/'
 description: A portfolio theme with a blog
-color_scheme: dark
+color_scheme: light
 accent_color: pink
 header:
   type: header
