--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl: /
 permalink: '/:title/'
 description: A portfolio theme with a blog
 color_scheme: light
-accent_color: pink
+accent_color: violet
 header:
   type: header
   title: Nixie Creative
