_config.yml: updated logo_img_alt in header

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ header:
       url: /contact/
       style: link
   logo_img: /images/Nixie Creative Logo Image.png
+  logo_img_alt: 'Purple hexagon logo with '
 footer:
   type: footer
   content: >-
