--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ header:
       url: /contact/
       style: link
   logo_img: /images/Nixie Creative Logo Image.png
-  logo_img_alt: 'Purple hexagon logo with angled triangles '
+  logo_img_alt: 'Purple hexagon logo with angled triangles in pink, blue, white and '
 footer:
   type: footer
   content: >-
