_config.yml: updated logo_img_alt in header

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ header:
       url: /contact/
       style: link
   logo_img: /images/Nixie Creative Logo Image.png
-  logo_img_alt: 'Purple hexagon logo with angled pink, blue, white and purple  inside'
+  logo_img_alt: 'Purple hexagon logo with angled pink, blue, white and purpletrianglesinside'
 footer:
   type: footer
   content: >-
