--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ accent_color: violet
 header:
   type: header
   title: Nixie Creative
-  has_nav: true
+  has_nav: false
   nav_links:
     - type: action
       label: Home
