--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Theme
+title: Nixie Creative
 baseurl: /
 permalink: '/:title/'
-description: A portfolio theme with a blog
+description: Web Design and Services
 color_scheme: light
 accent_color: violet
 header:
