--- a/_config.yml
+++ b/_config.yml
@@ -89,4 +89,4 @@ exclude:
 collections:
   posts:
     permalink: '/posts/:title/'
-favicon: /images/Nixie Creative Web Logo.png
+favicon: /images/superb-rosemary.png
