--- a/admin/config.yml
+++ b/admin/config.yml
@@ -290,6 +290,16 @@ collections:
         label: Excerpt
         required: false
         hint: The excerpt of the page displayed in meta data.
+      - widget: image
+        name: image
+        label: Image
+        required: false
+        hint: The image shown below the page title and subtitle.
+      - widget: string
+        name: image_alt
+        label: Image Alt Text
+        required: false
+        hint: The alt text of the image.
       - widget: list
         name: sections
         label: Sections
